week 3 reworked